@@ -5,6 +5,8 @@
 
 package org.opensearch.knn.memoryoptsearch;
 
+import java.util.Locale;
+
 import lombok.Setter;
 import lombok.experimental.Accessors;
 import org.opensearch.knn.index.SpaceType;
@@ -37,32 +39,34 @@ class NonNestedNMappingSchema {
     }
 
     public String createString() {
-        final String mapping = """
-            {
-              "properties": {
-                "%s": {
-                  "type": "knn_vector",
-                  "dimension": %s,
-                  "data_type": "%s",
-                  %s
-                  "space_type": "%s",
-                  "method": {
-                    "engine": "faiss",
-                    "name": "hnsw",
-                    "parameters": %s
-                  }
-                },
-                "%s": {
-                  "type": "keyword",
-                  "index": true
-                },
-                "%s": {
-                  "type": "keyword",
-                  "index": true
-                }
-              },
-              "dynamic": false
-            }""".formatted(
+        final String mapping = String.format(
+            Locale.ROOT,
+            """
+                {
+                  "properties": {
+                    "%s": {
+                      "type": "knn_vector",
+                      "dimension": %s,
+                      "data_type": "%s",
+                      %s
+                      "space_type": "%s",
+                      "method": {
+                        "engine": "faiss",
+                        "name": "hnsw",
+                        "parameters": %s
+                      }
+                    },
+                    "%s": {
+                      "type": "keyword",
+                      "index": true
+                    },
+                    "%s": {
+                      "type": "keyword",
+                      "index": true
+                    }
+                  },
+                  "dynamic": false
+                }""",
             knnFieldName,
             Integer.toString(dimension),
             dataType.getValue(),
